--- a/docs/formalism.tex
+++ b/docs/formalism.tex
@@ -145,13 +145,30 @@ The grammar is shown in Figure \ref{fig:obs-gram}. In the grammar, assume $\over
 \newcommand{\trueS}{\textsf{t}}
 \newcommand{\falseS}{\textsf{f}}
 \newcommand{\constS}{\texttt{const}}
-\newcommand{\assertS}{\texttt{assert}}
-\newcommand{\resS}{\texttt{residual}}
+\newcommand{\ifS}{\texttt{if}}
+\newcommand{\thenS}{\texttt{then}}
+\newcommand{\elseS}{\texttt{else}}
+\newcommand{\resS}{\texttt{res}}
+
+\newcommand{\resHelp}{\textsf{res}}
+\newcommand{\mergeHelp}{\textsf{merge}}
+\newcommand{\mergeableHelp}{\textsf{mergeable}}
+\newcommand{\transHelp}{\textsf{trans}}
+\newcommand{\rmHelp}{\textsf{rm}}
+\newcommand{\wfHelp}{\textsf{wf}}
+\newcommand{\fieldsHelp}{\textsf{fields}}
+\newcommand{\constFieldsHelp}{\textsf{constFields}}
+\newcommand{\mutableFieldsHelp}{\textsf{mutableFields}}
+\newcommand{\methodsHelp}{\textsf{methods}}
+\newcommand{\parentHelp}{\textsf{parent}}
+\newcommand{\hasParentHelp}{\textsf{hasParent}}
+\newcommand{\contractOfHelp}{\textsf{contractOf}}
+\newcommand{\substHelp}{\textsf{subst}}
 
 \begin{figure}
 \fbox{
 \begin{minipage}{\pagewidth}
-$x, y, z \in \textsc{Variables} 		\hfill 		\ell \in \textsc{IndirectRefs} 	\hfill 		o \in \textsc{ObjectRefs}$		\hfill		$f \in \textsc{FieldNames}$
+$ \quad\qquad x, y, z, f \in \textsc{Variables} 		\hfill 		\ell \in \textsc{IndirectRefs} 	\hfill 		o \in \textsc{ObjectRefs} \qquad\quad $
 \begin{grammar}
 \renewcommand{\syntleft}{}
 \renewcommand{\syntright}{}
@@ -164,8 +181,8 @@ $x, y, z \in \textsc{Variables} 		\hfill 		\ell \in \textsc{IndirectRefs} 	\hfil
 			\ |\ 	\readonlyS
 			\ |\ 	\sharedS$
 			
-<$P$> ::= $x
-			\ |\ 	P.f$
+<$P$> ::= $x.P
+			\ |\ 	x$
 			
 <$\tau_{s}$> ::= $C
 			\ |\ 	C.S
@@ -186,15 +203,13 @@ $x, y, z \in \textsc{Variables} 		\hfill 		\ell \in \textsc{IndirectRefs} 	\hfil
 			\ |\ 	\letS\ x = e\ \inS\ e
 			\ |\ 	\newS\ C.S(\overline{x})\ \asS\ p
 			\ |\	x.m(\overline{x})
-			\ |\	f.m(\overline{x})$
+			\ |\ 	\resS(f)$
 		\alt $\throwS
 			\ |\ 	\tryS\ \{\ e\ \}\ \catchS\ \{\ e\ \}$
 		\alt $\packS\ S(\overline{x})\ \withS\ x
 			\ |\ 	\unpackS\ \{\ e\ \}
-			\ |\ 	\assertS\ x : \tau_{s}\ \inS\ e$
-		\alt $\ell
-			\ |\ 	\resS(x)
-			\ |\ 	\resS(f)$
+			\ |\ 	\ifS\ x : \tau_{s}\ \inS\ e$
+		\alt $\ell$
 
 \end{grammar}
 \end{minipage}
@@ -263,51 +278,46 @@ Explanation of specific rules:
 \begin{figure*}[h!]
 \fbox{\begin{minipage}{\pagewidth}
 
-\boxed{res(p)} Residual Permission
+\boxed{\resHelp(p), \resHelp(\tau), \resHelp(\overline{x}, \Delta)} Residual Permission/Type/Context
 \begin{mathpar}
 \inferlbl{}
 	{}
-	{res(\ownedS) = \readonlyS}
+	{\resHelp(\ownedS) = \readonlyS}
 \and
 \inferlbl{}
 	{}
-	{res(\readonlyS) = \readonlyS}
+	{\resHelp(\readonlyS) = \readonlyS}
 \and
 \inferlbl{}
 	{}
-	{res(\sharedS) = \sharedS}
-\end{mathpar}
-\boxed{res(\tau)} Residual Type
-\begin{mathpar}
+	{\resHelp(\sharedS) = \sharedS}
+\and
 \inferlbl{}
 	{}
-	{res(p \permS \tau_{s}) = res(p) \permS \tau_{s}}
-\end{mathpar}
-
-\boxed{res(\overline{x}, \Delta)} Residual Context
-\begin{mathpar}
+	{\resHelp(p \permS \tau_{s}) = \resHelp(p) \permS \tau_{s}}
+\and
 \inferlbl{}
-	{ \Delta' = \Delta[x_{i} \mapsto res(\Delta(x_{i}))]}
-	{res(\overline{x}, \Delta) = \Delta'}
+	{ \Delta' = \Delta[x_{i} \mapsto \resHelp(\Delta(x_{i}))]}
+	{\resHelp(\overline{x}, \Delta) = \Delta'}
 \end{mathpar}
 
-\boxed{rm(x, \Delta),\ rm(\overline{x}, \Delta)} 
+\boxed{\rmHelp(x, \Delta),\ \rmHelp(\overline{x}, \Delta)} 
 \begin{mathpar}
 \inferlbl{}
 	{p \neq \ownedS}
-	{rm(x, (\Delta, x : p \permS \tau)) = \Delta}
+	{\rmHelp(x, (\Delta, x : p \permS \tau)) = \Delta}
 \and
 \inferlbl{}
 	{x \not\in \textsf{dom}(\Delta)}
-	{rm(x, \Delta) = \Delta}
+	{\rmHelp(x, \Delta) = \Delta}
 \\
 \inferlbl{}
 	{}
-	{rm(\emptyset, \Delta) = \Delta}
+	{\rmHelp(\emptyset, \Delta) = \Delta}
 \and
 \inferlbl{}
 	{}
-	{rm(\{x_{1}, \ldots, x_{n}, x_{n+1}\}, \Delta) = rm(\{x_{1}, \ldots, x_{n}\}, rm(x_{n+1}, \Delta)) }
+	{\rmHelp(\{x_{1}, \ldots, x_{n}, x_{n+1}\}, \Delta) = \rmHelp(\{x_{1}, \ldots, x_{n}\}, \rmHelp(x_{n+1}, \Delta)) }
 \end{mathpar}
 
 \boxed{\tau <: \tau'} Subtyping
@@ -325,47 +335,71 @@ Explanation of specific rules:
 	{p \permS P.C.S <: p \permS P.C}
 \end{mathpar}
 
-\boxed{trans(\overline{S}, \tau_{s})}
+\boxed{\mergeableHelp(\Delta; \Delta_{1}, \ldots, \Delta_{n}),\ \mergeHelp(\Delta; \Delta_{1}, \ldots, \Delta_{n})} 
 \begin{mathpar}
 \inferlbl{}
-	{}
-	{trans(\{S\}, C) = C.S}
+	{\mergeableHelp(\Delta; \Delta_{1}, \ldots, \Delta_{n}) \qquad \exists \tau'. \big( \forall i. \Delta_{i}(x) <: \tau' \big)}
+	{\mergeableHelp((\Delta, x : \tau); \Delta_{1}, \ldots, \Delta_{n})}
 \and
 \inferlbl{}
 	{}
-	{trans(\{\}, \tau_{s}) = \tau_{s}}
+	{\mergeableHelp(\emptyset; \Delta_{1}, \ldots, \Delta_{n})}
 \and
 \inferlbl{}
-	{}
-	{trans(\{S_{2}\}, C.S_{1}) = C.S_{2}}
-\and
-\inferlbl{}
-	{}
-	{trans(\{ S_{1}, S_{2}, \ldots \} , C.S) =  C}
-\and
-\inferlbl{}
-	{}
-	{trans(\{ S_{1}, S_{2}, \ldots \} , C) = C}
+	{\mergeableHelp(\Delta; \Delta_{1}, \ldots, \Delta_{n})}
+	{\mergeHelp(\Delta; \Delta_{1}, \ldots, \Delta_{n}) = \{ (x, \tau) \ \vert\ x \in \Delta\ \&\ \Delta_{i}(x) <: \tau \} }
 \end{mathpar}
 
-
-\boxed{mergeable(\Delta; \Delta_{1}, \ldots, \Delta_{n})} 
+\boxed{ \wfHelp(\Delta, C, \tau_{s}), \wfHelp(\Delta, C, \tau) }  Wellformedness of types w.r.t. $\Delta$ and $C$
 \begin{mathpar}
 \inferlbl{}
-	{mergeable(\Delta; \Delta_{1}, \ldots, \Delta_{n}) \qquad \exists \tau'. \big( \forall i. \Delta_{i}(x) <: \tau' \big)}
-	{mergeable((\Delta, x : \tau); \Delta_{1}, \ldots, \Delta_{n})}
+	{ \parentHelp(C) = D \qquad \tau_{b} = C \lor \tau_{b} = C.S }
+	{ \wfHelp(\Delta, D, \tau_{b}) }
+\and
+
+\inferlbl{}
+	{ \lnot \hasParentHelp(C) \qquad \tau_{b} = C \lor \tau_{b} = C.S }
+	{ \wfHelp(\Delta, D, \tau_{b}) }
 \and
 \inferlbl{}
-	{}
-	{mergeable(\emptyset; \Delta_{1}, \ldots, \Delta_{n})}
+	{ \tau_{b} = C \lor \tau_{b} = C.S }
+	{ \wfHelp(\Delta, C, \tau_{b}) }
+\and
+\inferlbl{}
+	{ \Delta(x) = C' \qquad \wfHelp(\emptyset, C', P.\tau_{b}) \qquad \tau_{b} = C \lor \tau_{b} = C.S}
+	{ \wfHelp(\Delta, D, x.P.\tau_{b}) }
+\and
+\inferlbl{}
+	{ (\tau_{f}\ f) \in \constFieldsHelp(D) \qquad \wfHelp(\emptyset, \contractOfHelp(\tau_{f}), P.\tau_{b}) \qquad \tau_{b} = C \lor \tau_{b} = C.S}
+	{ \wfHelp(\Delta, D, f.P.\tau_{b}) }
 \end{mathpar}
-
-\boxed{merge(\Delta; \Delta_{1}, \ldots, \Delta_{n})} 
+\boxed{ \substHelp(\tau, x: \tau', M)} Substitution for Types
 \begin{mathpar}
 \inferlbl{}
-	{mergeable(\Delta; \Delta_{1}, \ldots, \Delta_{n})}
-	{merge(\Delta; \Delta_{1}, \ldots, \Delta_{n}) = \{ (x, \tau) \ \vert\ x \in \Delta\ \&\ \Delta_{i}(x) <: \tau \} }
+	{ M(z) = y }
+	{ \substHelp(p \permS z.\tau, x: \tau', M) = p \permS y.\tau }
+\and
+\inferlbl{}
+	{ z \not\in \textsf{dom}(M) }
+	{ \substHelp(p \permS z.\tau, x : \tau', M) = p \permS x.z.\tau }
+\and
+\inferlbl{}
+	{ \lnot \hasParentHelp(C) \qquad \tau_{b} = C \lor \tau_{b} = C.S}
+	{ \substHelp(p \permS \tau_{b}, x: \tau, M) = p \permS \tau_{b} }
+\and
+\inferlbl{}
+	{ \hasParentHelp(C) \qquad \parentHelp(C) = \contractOfHelp(\tau) \qquad \tau_{b} = C \lor \tau_{b} = C.S }
+	{ \substHelp(p \permS \tau_{b}, x: \tau, M) = p \permS x.\tau_{b}  }
+\and
+\inferlbl{}
+	{ \contractOfHelp(\tau_{b}) = C }
+	{ \substHelp(p \permS C, x: P.\tau_{b}, M) = p \permS P.C }
+\and
+\inferlbl{}
+	{ \contractOfHelp(\tau_{b}) = C }
+	{ \substHelp(p \permS C.S, x: P.\tau_{b}, M) = p \permS P.C.S }
 \end{mathpar}
+
 \end{minipage}
 }
 \caption{Auxiliary Relations}
@@ -382,57 +416,53 @@ Explanation of specific rules:
 \and
 \inferlbl{t-var}
 	{ }
-    	{\Delta, x : \tau \vdash_{b} x : \tau \dashv \Delta, x : res(\tau) }
+    	{\Delta, x : \tau \vdash_{b} x : \tau \dashv \Delta, x : \resHelp(\tau) }
 \and
 \inferlbl{t-let}
-	{ x \not\in \Delta \qquad \Delta \vdash_{b} e_{1} : p \permS \tau_{s} \dashv \Delta_{1} \qquad \Delta_{1}, x : p \permS \tau_{s}  \vdash_{b} e_{2} : \tau \dashv \Delta_{2} }
-	{ \Delta \vdash_{b} \letS\ x = e_{1}\ \inS\ e_{2} : \tau \dashv rm(x, \Delta_{2}) }
+	{ \forall P, \tau_{b}.\ \tau \neq x.P.\tau_{b} \qquad \forall \tau.\ (\tau\ x) \not\in \constFieldsHelp(\Delta(\thisS))
+	\\\\
+	x \not\in \Delta \qquad \Delta \vdash_{b} e_{1} : p \permS \tau_{s} \dashv \Delta_{1} \qquad \Delta_{1}, x : p \permS \tau_{s}  \vdash_{b} e_{2} : \tau \dashv \Delta_{2} }
+	{ \Delta \vdash_{b} \letS\ x = e_{1}\ \inS\ e_{2} : \tau \dashv \rmHelp(x, \Delta_{2}) }
 \and
 \inferlbl{t-new}
-	{ managed(C) \Rightarrow \Delta(\thisS) <: p' \permS manager(C)
-	\\\\
-	\overline{\tau\ \,f} = fields(C.S) }
-	{ \Delta, \overline{x : \tau} \vdash_{b} \newS\ C.S(\overline{x})\ \asS\ p : p \permS C.S \dashv \Delta}
+	{ \hasParentHelp(C) \Rightarrow \exists p'.\ \Delta(\thisS) <: p' \permS \parentHelp(C) \qquad \overline{\tau\ \,f} = \fieldsHelp(C.S) }
+	{ \Delta, \overline{x : \tau} \vdash_{b} \newS\ C.S(\overline{x})\ \asS\ p : p \permS C.S \dashv \Delta, \overline{x: \resHelp(\tau)}}
 \and
-\inferlbl{t-res-1}
-	{ (\tau\ \,f) \in fields(\Delta(\thisS)) }
-    	{ \Delta \vdash_{\falseS} \resS(f) : res(\tau) \dashv \Delta }
-\and
-\inferlbl{t-res-2}
-	{ }
-    	{ \Delta, x : \tau \vdash_{\trueS} \resS(x) : res(\tau) \dashv \Delta, x : \tau }
+\inferlbl{t-read}
+	{ (\tau\ \,f) \in \fieldsHelp(\Delta(\thisS)) }
+    	{ \Delta \vdash_{b} \resS(f) : \resHelp(\tau) \dashv \Delta }
 \and
 \inferlbl{t-thr}
 	{  }
 	{ \Delta \vdash_{b} \throwS : \tau \dashv \Delta' }
 \and
-\inferlbl{t-inv-1}
-	{ \big(TL\ \tau''\ m(\overline{\tau\ z}) \rightarrow \overline{S} \big) \in methods(\tau') \qquad p = \readonlyS \Rightarrow TL = \functionS }
-	{ \Delta, x : p \permS \tau', \overline{y : \tau[z \mapsto y][\thisS \mapsto x]} \vdash_{\falseS} x.m(\overline{y}) : \tau'' \dashv \Delta, x : p \permS trans(\overline{S}, \tau') }
-\and
-\inferlbl{t-inv-2}
-	{ (p \permS \tau'\ f) \in fields(\Delta(\thisS)) \qquad trans(\overline{S}, \tau') <: \tau'
+\inferlbl{t-inv}
+	{ M = \emptyset\overline{[z \mapsto y]}
 	\\\\
-	\big(TL\ \tau''\ m(\overline{\tau\ z}) \rightarrow \overline{S} \big) \in methods(\tau') \qquad p = \readonlyS \Rightarrow TL = \functionS }
-	{ \Delta, \overline{y : \tau[z \mapsto y][\thisS \mapsto \thisS.f]} \vdash_{\falseS} f.m(\overline{y}) : \tau'' \dashv \Delta }
+	\big(TL\ \tau_{ret}\ m(\overline{\tau\ z}) \rightarrow \overline{S} \big) \in \methodsHelp(\tau_{recip}) \qquad \tau_{ret}' = \substHelp(\tau_{ret}, x : \tau_{recip}, M)
+	\\\\
+	 p = \readonlyS \Rightarrow TL = \functionS \qquad \forall i.\ \tau_{i}' = \substHelp(\tau_{i}, x : \tau_{recip}, M) }
+	{ \Delta, x : p \permS \tau_{recip}, \overline{y : \tau'} \vdash_{\falseS} x.m(\overline{y}) : \tau_{ret}' \dashv \Delta, x : p \permS \transHelp(\overline{S}, \tau_{recip}), \overline{y : \resHelp(\tau')} }
 \and
 \inferlbl{t-unpack}
-	{ \Delta(\thisS) = p \permS C.S_{1} \qquad p \neq \readonlyS \qquad \overline{\tau\ f} =  mutableFields(C.S_{1}) 
+	{  \overline{\tau\ f} =  \fieldsHelp(C.S_{1})
 	\\\\
-	\forall i. f_{i} \not\in \Delta \qquad \Delta,\overline{ f : \tau}  \vdash_{\trueS} e : \packS[S_{2}, \tau] \dashv \Delta'}
-	{ \Delta \vdash_{\falseS} \unpackS\ \{e\} : \tau \dashv rm(\overline{f}, \Delta') }
+	p \neq \readonlyS \qquad \forall i. f_{i} \not\in \Delta \qquad \Delta,\overline{ f : \tau}  \vdash_{\trueS} e : \packS[S_{2}, \tau_{ret}] \dashv \Delta'}
+	{ \Delta, \thisS : p \permS C.S_{1} \vdash_{\falseS} \unpackS\ \{e\} : \tau_{ret} \dashv \rmHelp(\overline{f}, \Delta'), \thisS: p \permS C.S_{2} }
 \and
 \inferlbl{t-pack}
-	{ \overline{\tau\ f} = mutableFields(trans(S, \Delta(\thisS))) }
-	{ \Delta, y : \tau', \overline{x : \tau} \vdash_{\trueS} \packS\ S(\overline{x})\ \withS\ y : \packS[S, \tau'] \dashv  \Delta }
+	{ \overline{\tau_{c}\ f_{c}} = \constFieldsHelp(\Delta(\thisS)) \qquad  \overline{\tau_{m}\ f_{m}} = \mutableFieldsHelp(\transHelp(S, \Delta(\thisS)))
+	\\\\
+	\Delta(f_{c_{i}}) <: \tau_{c_{i}} \qquad \Delta' = \resHelp(\overline{f_{c}}, \Delta), y : \resHelp(\tau'), \overline{x : \resHelp(\tau_{m})} }
+	{ \Delta, y : \tau', \overline{x : \tau_{m}} \vdash_{\trueS} \packS\ S(\overline{x})\ \withS\ y : \packS[S, \tau'] \dashv  \Delta'}
 \and
 \inferlbl{t-try}
-	{ \Delta \vdash_{b} e_{1} : \tau \dashv \Delta_{1} \qquad \Delta \vdash_{b} e_{2} : \tau \dashv \Delta_{2}}
-	{ \Delta \vdash_{b} \tryS\ \{ e_{1} \}\ \catchS\ \{ e_{2} \} : \tau \dashv merge(\Delta; \Delta_{1}, \Delta_{2}) }
+	{ \Delta \vdash_{b} e_{1} : \tau \dashv \Delta_{1} \qquad \Delta \vdash_{b} e_{2} : \tau \dashv \Delta_{2} }
+	{ \Delta \vdash_{b} \tryS\ \{ e_{1} \}\ \catchS\ \{ e_{2} \} : \tau \dashv \mergeHelp(\Delta; \Delta_{1}, \Delta_{2}) }
 \and
-\inferlbl{t-assert}
-	{ \Delta, x : p \permS \tau_{s}' \vdash_{t} e \dashv \Delta' }
-	{ \Delta, x : p \permS \tau_{s} \vdash_{t} \assertS\ x : \tau_{s}'\ \inS\ e \dashv \Delta' }
+\inferlbl{t-dyn}
+	{ \Delta, x : p \permS \tau_{s}' \vdash_{b} e_{1} : \tau \dashv \Delta_{1} \qquad \Delta, x : p \permS \tau_{s} \vdash_{b} e_{2} : \tau \dashv \Delta_{2} }
+	{ \Delta, x : p \permS \tau_{s} \vdash_{t} \ifS\ x : \tau_{s}'\ \thenS\ e_{1}\ \elseS\ e_{2} \dashv \mergeHelp(\Delta; \Delta_{1}, \Delta_{2})  }
 \end{mathpar}
 \end{minipage}
 }
@@ -614,11 +644,11 @@ v ::= \ell
 \and
 \inferlbl{e-dyn-ex}
 	{ type(\mu(\rho(x)))\ \textsf{instanceOf}\ \tau_{s} }
-	{ \mu, \rho, \assertS\ x : \tau_{s}\ \inS\ e \rightarrow \mu', \textsf{Ex} }
+	{ \mu, \rho, \ifS\ x : \tau_{s}\ \inS\ e \rightarrow \mu', \textsf{Ex} }
 \and
 \inferlbl{e-dyn-ok}
 	{ type(\mu(\rho(x)))\ \textsf{instanceOf}\ \tau_{s} }
-	{ \mu, \rho, \assertS\ x : \tau_{s}\ \inS\ e \rightarrow \mu', e }
+	{ \mu, \rho, \ifS\ x : \tau_{s}\ \inS\ e \rightarrow \mu', e }
 \and
 \inferlbl{e-try-1}
 	{ }
